# Databases-For-Embedded-SW

./: LICENSE  README.md
Databases/: CMakeLists.txt  CMakePresets.json  MyExampleClass.cpp  MyExampleClass.h  main.cpp
Databases/Database/: DataValue.cpp  DataValue.h  RuntimeData.h  RuntimeDataMethods.cpp  RuntimeDataMethods.h  RuntimeDatabase.cpp  RuntimeDatabase.h  UserParameters.h  UserParametersDatabase.cpp  UserParametersDatabase.h  UserParametersMethods.cpp  UserParametersMethods.h
